--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,20 @@
 version: '3.8'
 
 services:
-  network-sentinel:
-    build: .
-    container_name: wifi-sentinel
-    # IMPORTANTE: Usamos 'host' para que el contenedor vea la red real de tu casa
+  backend:
+    build: ./backend
+    container_name: wifi-sentinel-backend
+    # IMPORTANTE: Usamos 'host' para que el escáner vea la red real
     network_mode: "host"
     restart: unless-stopped
-    # Leemos las variables directamente del archivo .env
     env_file:
       - .env
+
+  frontend:
+    build: ./frontend
+    container_name: wifi-sentinel-frontend
+    # Usamos host también para facilitar la comunicación con el backend en localhost:8080
+    network_mode: "host"
+    restart: unless-stopped
+    depends_on:
+      - backend
